--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
-    "next-dev": "next dev",
+    "next-dev": "next dev --turbopack",
     "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
@@ -12,22 +12,27 @@
   },
   "dependencies": {
     "@types/node": "22.5.5",
-    "@types/react": "18.3.8",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "autoprefixer": "10.4.20",
     "classnames": "^2.5.1",
     "concurrently": "^9.0.1",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "^14.2.13",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "eslint-config-next": "15.3.1",
+    "next": "15.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
+    "sass-embedded": "^1.86.3",
     "typescript": "5.6.2"
   },
   "devDependencies": {
     "postcss": "^8.5.3",
     "sass": "^1.86.3"
+  },
+  "overrides": {
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2"
   }
 }
