added distDir based on BUILD_DIR env variable

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
     "next-dev": "next dev --turbopack",
     "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-    "build": "next build",
+    "build": "BUILD_DIR=build next build",
     "start": "next start",
     "lint": "next lint"
   },
